// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-data-source should create a data source with settings 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Create Data Source With Settings",
  },
}
`;

exports[`create-data-source should create a new data source 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Create Data Source",
  },
}
`;
